--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,11 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
+      - uses: actions/checkout@v3
+        with:
+          repository: emacs-mirror/emacs
+          path: 'emacs'
+
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo Hello, world!
