Fix Brew command

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,4 +31,4 @@ jobs:
           path: 'emacs'
 
       - name: Install dependencies
-        run: brew Brewfile
+        run: brew bundle --file Brewfile
