--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           repository: emacs-mirror/emacs
+          ref: 'master'
           path: 'emacs'
 
       - name: Install dependencies
