Run make install

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,3 +50,7 @@ jobs:
       - name: Run make
         run: make -j $(nproc)
         working-directory: ./emacs
+
+      - name: Run make install
+        run: make install
+        working-directory: ./emacs
