--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,6 +61,6 @@ jobs:
 
       - name: Create release
         uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'main')
+        if: github.ref == 'refs/heads/main'
         with:
           files: ./emacs/nextstep/Emacs.app
