--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,6 +59,12 @@ jobs:
         run: make install
         working-directory: ./emacs
 
+      - name: Bump version and push tag
+        uses: anothrNick/github-tag-action@1.36.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          WITH_V: true
+
       - name: Create release
         uses: softprops/action-gh-release@v1
         if: github.ref == 'refs/heads/main'
