Try tagging and releasing with other Actions

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,13 +60,15 @@ jobs:
         working-directory: ./emacs
 
       - name: Bump version and push tag
-        uses: anothrNick/github-tag-action@1.36.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          WITH_V: true
-
-      - name: Create release
-        uses: softprops/action-gh-release@v1
+        uses: mathieudutour/github-tag-action@v6.0
         if: github.ref == 'refs/heads/main'
         with:
-          files: ./emacs/nextstep/Emacs.app
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Create release
+        uses: ncipollo/release-action@v1
+        if: github.ref == 'refs/heads/main'
+        with:
+          tag: ${{ steps.tag_version.outputs.new_tag }}
+          name: Release ${{ steps.tag_version.outputs.new_tag }}
+          bodyFile: './emacs/nextstep/Emacs.app'
