--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,6 +62,7 @@ jobs:
       - name: Bump version and push tag
         uses: mathieudutour/github-tag-action@v6.0
         if: github.ref == 'refs/heads/main'
+        id: tag_version
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
